Styling for collapsible field sets of extended search 'more fields' + z-index fix of omnibus

--- a/all/themes/custom/bioportal_theme/scss/bioportal_theme.scss
+++ b/all/themes/custom/bioportal_theme/scss/bioportal_theme.scss
@@ -25,6 +25,11 @@ $gray-8  : #4d4d4d;
 $gray-9  : #333333;
 $gray-10 : #1a1a1a;
 
+$icon-double-chevron-down:  "\e610";
+$icon-double-chevron-left:  "\e611";
+$icon-double-chevron-right:  "\e612";
+$icon-double-chevron-up:  "\e613";
+
 
 // GLOBAL OVERRIDES OF PARENT THEMES
 
@@ -90,11 +95,14 @@ $gray-10 : #1a1a1a;
     #banner-geographical-search{
       background-color : $gray-1;
       text-align       : center;
-      position         : absolute;
+      position         : relative;
       width            : 100%;
-      left             : 0;
-      top              : 200px;
-      padding-top      : 1em;
+      left             : -1em;
+      padding          : 1em 1em 0 1em;
+      box-sizing       : content-box;
+      margin           : 40px 0;
+
+
 
       a{
         display        : block;
@@ -192,81 +200,119 @@ $gray-10 : #1a1a1a;
     }
 
   // -- search: ADVANCED SEARCH
-  #ndabio-advanced-taxonomysearch{
-    left               : 0;
-    width              : 100%;
-    z-index            : 600;
-    position           : relative;
-  }
-
-  #edit-extended{
-    background-color   : $gray-8;
-    color              : $white;
-    padding            : 0.9375rem;
-    padding-top        : 1px;
-    margin             : 0;
-    border-width       : 0;
-    margin-bottom      : 30px;
-
-    @media (min-width  : 1000px) {
-      padding          : 0.9375rem percentage(2/12) 80px;
+    #ndabio-advanced-taxonomysearch{
+      left               : 0;
+      width              : 100%;
+      z-index            : 400;
+      position           : relative;
     }
 
-    fieldset{
-      font-size        : 1.125rem;
-      padding          : 0 0 30px 0;
-      border           : none;
-      border-bottom    : 1px solid $gray-5;
+    #edit-extended{
+      background-color   : $gray-8;
+      color              : $white;
+      padding            : 0.9375rem;
+      padding-top        : 1px;
+      margin             : 0;
+      border-width       : 0;
+      margin-bottom      : 30px;
 
-      fieldset{
-        border         : none;
-        padding        : 0;
+      @media (min-width  : 1000px) {
+        padding          : 0.9375rem percentage(2/12) 80px;
       }
 
+      fieldset{
+        font-size        : 1.125rem;
+        padding          : 0 0 30px 0;
+        border           : none;
+        border-bottom    : 1px solid $gray-5;
+
+        fieldset{
+          border         : none;
+          padding        : 0;
+        }
+      }
+
+      legend{
+        background       : none;
+        margin           : 0;
+
+      }
+
+      label{
+        font-size        : 1.125rem;
+        color            : $white;
+        font-weight      : 300;
+        letter-spacing   : 0.05em;
+        margin           : 0;
+        padding          : 0;
+      }
+
+      .form-item{
+        margin-bottom    : 0;
+        margin-top       : 0.5rem;
+      }
+
+      input[type='text'],
+      input[type='radio'] {
+        margin           : 0;
+        padding          : 3px;
+        height           : 26px;
+      }
+
+      #edit-submit--2{
+        position         : absolute;
+        right            : 3rem;
+        background-color : $orange;
+        border-radius    : 2px;
+        text-transform     : lowercase;
+        font-weight      : bolder;
+        letter-spacing   : 0.05em;
+      }
+
+      .form-type-radio{
+        float            : left;
+        width            : 50%;
+        margin-top       : 0;
+      }
     }
 
-    legend{
-      background       : none;
-      margin           : 0;
+    html.js fieldset{
+      &.collapsed .fieldset-legend {
+        background-image: url("../../misc/menu-collapsed.png");
+        background-position: 5px 50%;
+      }
+
+      &.collapsible .fieldset-legend {
+        background: url("../../misc/menu-expanded.png") no-repeat scroll 5px 65% rgba(0, 0, 0, 0);
+        padding-left: 15px;
+      }
     }
 
-    label{
-      font-size        : 1.125rem;
-      color            : $white;
-      font-weight      : 300;
-      letter-spacing   : 0.05em;
-      margin           : 0;
-      padding          : 0;
+    #edit-extended fieldset fieldset.collapsible {
+      legend{
+        margin-left: percentage(1/12);
+      }
+
+      .fieldset-legend{
+        margin: 0;
+        padding: 0;
+      }
+      a{
+        color: $orange;
+        text-transform: lowercase;
+        font-weight: 400;
+        &:after{
+          font-family: 'App2';
+          position: relative;
+          top: 3px;
+          content: $icon-double-chevron-up;
+        }
+
+      }
+
+      &.collapsed{
+        a:after{
+          content: $icon-double-chevron-down;
+        }
+      }
     }
-
-    .form-item{
-      margin-bottom    : 0;
-      margin-top       : 0.5rem;
-    }
-
-    input[type='text'],
-    input[type='radio'] {
-      margin           : 0;
-      padding          : 3px;
-      height           : 26px;
-    }
-
-
-    #edit-submit--2{
-      position         : absolute;
-      right            : 3rem;
-      background-color : $orange;
-      border-radius    : 2px;
-      text-transform     : lowercase;
-      font-weight      : bolder;
-      letter-spacing   : 0.05em;
-    }
-
-    .form-type-radio{
-      float            : left;
-      width            : 50%;
-      margin-top       : 0;
-    }
-
-
-  }
